--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,17 +14,16 @@ markdown: kramdown
 
 
 ### content configuration ###
-home: "newsong.top"
-title: "NewSong.Top"
-keywords: "newsong.top for you,new song, hot song,new songs,hot songs,punjabi song,new song 2020,santali video,wapking,new song 2019"
-description: "NewSong.Top  for you,new song, hot song,new song 2020,Audiovisual Appreciation"
-source_link: "https://newsong.top"
+home: "appemit.com"
+title: "appemit.com"
+keywords: "appemit.com AppEmit是应用程序（尤其是浏览器）与本地程序间互相通信的易扩展的轻量级中间件"
+description: "Embed App,游戏,办公,websocket,SSL,plugins,flash,mp4,flv,swf, m3u8,rtmp,mp3,aac"
+source_link: "https://appemit.com"
 favicon: "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
-email: "chygmm(at)qq.com"
-qq: "1523338780"
-phone: "1-8-5-2-0-9-5-6-7-8-7"
-google_analytics_key:  UA-51913082-3 ## put YOUR key here to enable tracking! (blank to disable)
+email: "appemit(at)appemit.com"
+ 
+google_analytics_key:  UA-51913082-5 ## put YOUR key here to enable tracking! (blank to disable)
 
 
 ### template colors, used site-wide via css ###
