--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,9 +15,9 @@ markdown: kramdown
 
 ### content configuration ###
 home: "appemit.com"
-title: "appemit.com"
-keywords: "appemit.com AppEmit是应用程序（尤其是浏览器）与本地程序间互相通信的易扩展的轻量级中间件"
-description: "Embed App,游戏,办公,websocket,SSL,plugins,flash,mp4,flv,swf, m3u8,rtmp,mp3,aac"
+title: "Appemit"
+keywords: "Embed App,游戏,办公,websocket,SSL,plugins,flash,mp4,flv,swf, m3u8,rtmp,mp3,aac"
+description: "appemit.com，AppEmit是应用程序（尤其是浏览器）与本地程序间互相通信的易扩展的轻量级中间件"
 source_link: "https://appemit.com"
 favicon: "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
