--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@ home: "appemit.com"
 title: "Appemit"
 keywords: "Embed App,游戏,办公,websocket,SSL,plugins,flash,mp4,flv,swf, m3u8,rtmp,mp3,aac"
 description: "appemit.com，AppEmit是应用程序（尤其是浏览器）与本地程序间互相通信的易扩展的轻量级中间件"
-source_link: "https://appemit.com"
+source_link: "http://www.appemit.com"
 favicon: "img/favicon.ico"
 touch_icon:  "img/apple-touch-icon.png"
 email: "appemit(at)appemit.com"
